<resources>
    <string name="app_name">larkMessage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">logout</string>
    <string name="nav_moment">Moment Gallery</string>
    <string name="logout_version">Thanks for your support to our app!</string>
    <string name="app_title">LARK MESSAGE</string>
    <string name="email">EMAIL</string>

    <string name="sign_in">SIGN IN</string>

    <string name="your_email_address">your email address</string>
    <string name="your_password">Your password</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="password">PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="cancel">CANCEL</string>
    <string name="friend_dialog">ADD A NEW FRIEND</string>
    <string name="title_activity_moment">MomentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="added_friends">You can\'t add a same person.</string>
    <string name="title_activity_user_info_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="choose_your_icon">Choose your Icon</string>
    <string name="nickename">nickname</string>
    <string name="accept">ACCEPT</string>
    <string name="nickname">Nickname</string>
    <string name="waiting_for_your_resopone">waiting for your response</string>
    <string name="question_delete_friend">Are you sure to delete your friends?</string>
    <string name="opotion_cant_cancel_warning">this option can\'t be cancelled.</string>
    <string name="delete">Delete</string>
    <string name="waiting_for_friend_respone">Waiting for friend\'s responds</string>
    <string name="delete_this_moment">Delete this Moment</string>
    <string name="make_sure_delete_message">Are you sure to delete this message?</string>
    <string name="Remove">Remove</string>
    <string name="delete_this_message">Delete this Message</string>
    <string name="only_sender_can_delete_message">Only the sender can delete message!</string>
    <string name="moment_continue">Continue</string>
    <string name="who_like_moment">Who like this moment?</string>
    <string name="who_dislike_this_moment">Who dislike this moment?</string>
    <string name="makesure_delete_moment">Are you sure to delete this moment?</string>
    <string name="ignore_moment">you are not the sender of the moment,are you sure to ignore this moment? If you do that , you will not see this moment forever!</string>
    <string name="please_input_your_friendemail">Please Input your friend email:</string>
    <string name="email_address">email address</string>
    <string name="add">ADD</string>
    <string name="click_add">Click Add</string>
    <string name="dont_add_yourself">\"don\'t add yourself! \"</string>
    <string name="input_is_empty">input is empty</string>
    <string name="click_cancel">Click Cancel</string>
    <string name="click_continue">Click Continue</string>
    <string name="invaluesd_user">InValued User</string>
    <string name="internet_error">\" internet error\"</string>
    <string name="you_have_added">You have added your friend</string>
    <string name="online">(Online)</string>
    <string name="offline">(Offline)</string>
    <string name="do_you_want_to_accept">\"Do you want to accept the invitation from \"</string>
    <string name="creat_a_moment">Create a moment now?</string>
    <string name="choose_color">Choose color</string>
    <string name="ok">\"ok \"</string>
    <string name="invalided_email">Invalided email</string>
    <string name="invalided_email_phone">Invalided email phone number</string>
    <string name="need_more_info">need more info</string>
    <string name="email_">Email:</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="forget_password">Forget password</string>
    <string name="please_input_your_email">Please input your email and phone Number:</string>
    <string name="your_password_">your password :</string>
    <string name="incorrect_phone_number">incorrect phone number</string>
    <string name="incorrect_email">incorrect email</string>
    <string name="no_internet">no internet!</string>
    <string name="result_">Result:</string>
    <string name="relationdate">RelationDate:</string>
    <string name="friend_relationship">Friend Relationship</string>
    <string name="refuse_watch_moment">refuse him watch your moment</string>
    <string name="accept_watch_moment">accept him watch your moment</string>
    <string name="moment_permit">Moment permit</string>
    <string name="design_your_own_style">Design your own style</string>
    <string name="choose_your_background_color">Choose your background color</string>
    <string name="remember_me">Remember Me</string>
    <string name="if_you_forget_your_password_click_here">if you forget your password ,click here!</string>
    <string name="note_add_from">\"add friends notification from \"</string>
    <string name="want_add_you">\" want to add you\"</string>
    <string name="incorrect_info">Incorrect email or phone number</string>
    <string name="contact_us">Contact us by email</string>
</resources>
