<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_version"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="italic"
            android:textColor="@color/colorAccent"
            />

        <LinearLayout
            android:id="@+id/uName_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/uName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uEmail_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uEmail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/uEmail_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"

                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uPhone_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uPhone_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/uPhone_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="15dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/uPassword_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uPassword_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/uPassword_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="15dp" />
        </LinearLayout>

        <Switch
            android:id="@+id/register_password_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="hide your password"/>

        <LinearLayout
            android:id="@+id/uIcon_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/uIcon_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/choose_your_icon"
                android:textSize="35dp" />

            <ImageView
                android:id="@+id/uIcon_Image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/nn21" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/uButton_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="right"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="right"
                android:layout_marginRight="50dp"
                android:text="@string/register" />
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>